# Farmers-Market-Place

./: .env.example  .gitignore  README.md  Run.md  test-cart.sh  test-mpesa.sh
backend/: .env.example  .gitignore  Cargo.toml  README.md
backend/src/: db.rs  email.rs  gemini.rs  main.rs  models.rs  mpesa.rs  routes.rs
database/: migration.sql
frontend/: .env.example  index.html  package-lock.json  package.json  replace_alerts.sh
frontend/src/: App.css  App.jsx  api.js  index.css  main.jsx
frontend/src/components/: AdminDashboard.jsx  Auth.css  Auth.jsx  AuthDebug.jsx  Cart.css  Cart.jsx  CartContext.jsx  Chat.css  Chat.jsx  Chatbot.css  Chatbot.jsx  Conversations.css  Conversations.jsx  CustomerDashboard.css  CustomerDashboard.jsx  Dashboard.jsx  FollowContext.jsx  Header.css  Header.jsx  Home.css  Home.jsx  ImageUploadWithResize.jsx  MpesaTest.css  MpesaTest.jsx  Products.css  Products.jsx  PurchaseReport.css  PurchaseReport.jsx  SalesReport.css  SalesReport.jsx  Shipping.css  Shipping.jsx  UserContext.js  UserContext.jsx  VendorDashboard.css  VendorDashboard.jsx  VendorProfile.css  VendorProfile.jsx  VendorProfileView.css  VendorProfileView.jsx  (+4 more)
frontend/src/hooks/: useFollow.jsx  useUser.jsx  useUserHook.jsx
