[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros"] }
bcrypt = "0.15"
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
dotenv = "0.15"
rand = "0.8"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "rustls-tls", "tokio1-rustls"] }
uuid = { version = "1.0", features = ["v4"] }
