[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }

sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros"] }
bcrypt = "0.15"
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
dotenv = "0.15"
rand = "0.8"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "rustls-tls", "tokio1-rustls"] }
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.48.0", features = ["full"] }

# M-Pesa Daraja API Integration Dependencies
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
base64 = "0.21"
url = "2.4"
